# androix-xcb-libxcb

./: .gitignore  COPYING  ChangeLog  Makefile.am  NEWS  README  acinclude.m4  configure.ac  xcb-composite.pc.in  xcb-damage.pc.in  xcb-dpms.pc.in  xcb-glx.pc.in  xcb-randr.pc.in  xcb-record.pc.in  xcb-render.pc.in  xcb-res.pc.in  xcb-screensaver.pc.in  xcb-shape.pc.in  xcb-shm.pc.in  xcb-sync.pc.in  xcb-xevie.pc.in  xcb-xf86dri.pc.in  xcb-xfixes.pc.in  xcb-xfree86dri.pc.in  xcb-xprint.pc.in  xcb-xtest.pc.in  xcb-xv.pc.in  xcb-xvmc.pc.in  xcb.doxygen  xcb.pc.in
debian/: .gitignore  changelog  control  copyright.debian  libxcb0-dev.install  libxcb0.install  libxcbcomposite0-dev.install  libxcbcomposite0.install  libxcbdamage0-dev.install  libxcbdamage0.install  libxcbdpms0-dev.install  libxcbdpms0.install  libxcbglx0-dev.install  libxcbglx0.install  libxcbrandr0-dev.install  libxcbrandr0.install  libxcbrecord0-dev.install  libxcbrecord0.install  libxcbrender0-dev.install  libxcbrender0.install  libxcbres0-dev.install  libxcbres0.install  libxcbscreensaver0-dev.install  libxcbscreensaver0.install  libxcbshape0-dev.install  libxcbshape0.install  libxcbshm0-dev.install  libxcbshm0.install  libxcbsync0-dev.install  libxcbsync0.install  libxcbxevie0-dev.install  libxcbxevie0.install  libxcbxf86dri0-dev.install  libxcbxf86dri0.install  libxcbxfixes0-dev.install  libxcbxfixes0.install  libxcbxprint0-dev.install  libxcbxprint0.install  libxcbxtest0-dev.install  libxcbxtest0.install  (+5 more)
doc/: Makefile.am
doc/tutorial/: index.html  xcb.css
src/: .gitignore  Makefile.am  c-client.xsl  c_client.py  xcb.h  xcb_auth.c  xcb_conn.c  xcb_ext.c  xcb_in.c  xcb_list.c  xcb_out.c  xcb_util.c  xcb_windefs.h  xcb_xid.c  xcb_xlib.c  xcbext.h  xcbint.h  xcbxlib.h
src/extensions/: README
tests/: .cvsignore  .gitignore  Makefile.am  check_public.c
tools/: api_conv.pl  const-names.xsl  constants
